kubernetes/kind/resources/systemdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: systemdb
    app/group: corus
    app/profile: default
  name: systemdb
  namespace: corus
spec:
  # externalName: systemdb-postgresql.corus.svc.cluster.local
  externalName: postgresql-postgresql-ha-pgpool.postgresql.svc.cluster.local
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  sessionAffinity: None
  type: ExternalName
